data/derived/sp14/progs/unify/prog4550.ml.out
Characters 82-92:
  | Sine var1 -> "sin (pi*" + exprToString var1 + ")"
                 ^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
